--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,11 +31,11 @@ jobs:
     - run: npm install
 
     - name: Start server
-      run: node server.js &
+      run: nmp start &
       shell: bash
 
     - name: Wait for server to start
-      run: sleep 10
+      run: sleep 5
 
     - name: Health check
       run: curl --fail http://localhost:3000
